<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="@color/background">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabTitleSelect"
        style="@style/StudioTheme">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/me"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/login_now" />
    <TextView
        android:id="@+id/tv1"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:layout_below="@id/tv"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_tag" />


</RelativeLayout>