<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/tabTitleSelect"
        style="@style/StudioTheme">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/title1"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin3"
        android:layout_marginBottom="@dimen/margin3"
        android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/tab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1.0"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_first"
            android:layout_width="30dp"
            android:layout_height="29dp"
            android:background="@drawable/tab1_selector"/>
        <TextView
            android:id="@+id/tv_guid1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tab1"
            android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_subcr"
                android:layout_width="30dp"
                android:layout_height="29dp"
                android:background="@drawable/tab2_selector"/>

            <TextView
                android:id="@+id/tv_guid2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab2"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1.0"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_me"
                android:layout_width="30dp"
                android:layout_height="29dp"
                android:background="@drawable/tab3_selector"/>
            <TextView
                android:id="@+id/tv_guid3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab3"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <!--<ImageView-->
        <!--android:id="@+id/cursor"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:scaleType="matrix"-->
        <!--android:src="@drawable/cursor"/>-->
    <android.support.v4.view.ViewPager
        android:layout_above="@id/ll_tab"
        android:id="@+id/viewpager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:flipInterval="30"
        android:persistentDrawingCache="animation"/>
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/ll_tab"
        android:background="@android:color/darker_gray"></View>
</RelativeLayout>